// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/StatsBar Cpu Temp 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf ckXSHX sc-iBkjds gXkNkX sc-hHLeRK eTSHtc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds hNqnWQ sc-hHLeRK fICmLJ"
      >
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cypUEk"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux"
            >
              <span
                class="sc-ivTmOn dNJphr sc-llJcti elVvfY"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-microchip "
                  data-icon="microchip"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M176 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64c-35.3 0-64 28.7-64 64H24c-13.3 0-24 10.7-24 24s10.7 24 24 24H64v56H24c-13.3 0-24 10.7-24 24s10.7 24 24 24H64v56H24c-13.3 0-24 10.7-24 24s10.7 24 24 24H64c0 35.3 28.7 64 64 64v40c0 13.3 10.7 24 24 24s24-10.7 24-24V448h56v40c0 13.3 10.7 24 24 24s24-10.7 24-24V448h56v40c0 13.3 10.7 24 24 24s24-10.7 24-24V448c35.3 0 64-28.7 64-64h40c13.3 0 24-10.7 24-24s-10.7-24-24-24H448V280h40c13.3 0 24-10.7 24-24s-10.7-24-24-24H448V176h40c13.3 0 24-10.7 24-24s-10.7-24-24-24H448c0-35.3-28.7-64-64-64V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H280V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H176V24zM160 128H352c17.7 0 32 14.3 32 32V352c0 17.7-14.3 32-32 32H160c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32zm192 32H160V352H352V160z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
              >
                Temperature
              </span>
            </div>
            <span
              class="sc-ivTmOn dNJphr sc-llJcti bvCivW"
              style="line-height: 1;"
            >
              ​
            </span>
          </div>
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          ~34C
        </span>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK exPuPE"
      >
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds hYdgwD"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 34%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 294.11764705882354%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/StatsBar Cpu Usage 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf ckXSHX sc-iBkjds gXkNkX sc-hHLeRK eTSHtc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds hNqnWQ sc-hHLeRK fICmLJ"
      >
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cypUEk"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux"
            >
              <span
                class="sc-ivTmOn dNJphr sc-llJcti elVvfY"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-microchip "
                  data-icon="microchip"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M176 24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64c-35.3 0-64 28.7-64 64H24c-13.3 0-24 10.7-24 24s10.7 24 24 24H64v56H24c-13.3 0-24 10.7-24 24s10.7 24 24 24H64v56H24c-13.3 0-24 10.7-24 24s10.7 24 24 24H64c0 35.3 28.7 64 64 64v40c0 13.3 10.7 24 24 24s24-10.7 24-24V448h56v40c0 13.3 10.7 24 24 24s24-10.7 24-24V448h56v40c0 13.3 10.7 24 24 24s24-10.7 24-24V448c35.3 0 64-28.7 64-64h40c13.3 0 24-10.7 24-24s-10.7-24-24-24H448V280h40c13.3 0 24-10.7 24-24s-10.7-24-24-24H448V176h40c13.3 0 24-10.7 24-24s-10.7-24-24-24H448c0-35.3-28.7-64-64-64V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H280V24c0-13.3-10.7-24-24-24s-24 10.7-24 24V64H176V24zM160 128H352c17.7 0 32 14.3 32 32V352c0 17.7-14.3 32-32 32H160c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32zm192 32H160V352H352V160z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
              >
                CPU
              </span>
            </div>
            <span
              class="sc-ivTmOn dNJphr sc-llJcti bvCivW"
              style="line-height: 1;"
            >
              ​
            </span>
          </div>
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          ~23%
        </span>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK exPuPE"
      >
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds dLaGQT"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 100%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds dLaGQT"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 100%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 100%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds dLaGQT"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 0%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 0%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds dLaGQT"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 0%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 0%;"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds hYdgwD"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 0%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 0%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/StatsBar Memory 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf ckXSHX sc-iBkjds gXkNkX sc-hHLeRK eTSHtc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds hNqnWQ sc-hHLeRK fICmLJ"
      >
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cypUEk"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux"
            >
              <span
                class="sc-ivTmOn dNJphr sc-llJcti elVvfY"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-memory "
                  data-icon="memory"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M64 64C28.7 64 0 92.7 0 128v7.4c0 6.8 4.4 12.6 10.1 16.3C23.3 160.3 32 175.1 32 192s-8.7 31.7-21.9 40.3C4.4 236 0 241.8 0 248.6V320H576V248.6c0-6.8-4.4-12.6-10.1-16.3C552.7 223.7 544 208.9 544 192s8.7-31.7 21.9-40.3c5.7-3.7 10.1-9.5 10.1-16.3V128c0-35.3-28.7-64-64-64H64zM576 352H0v64c0 17.7 14.3 32 32 32H80V416c0-8.8 7.2-16 16-16s16 7.2 16 16v32h96V416c0-8.8 7.2-16 16-16s16 7.2 16 16v32h96V416c0-8.8 7.2-16 16-16s16 7.2 16 16v32h96V416c0-8.8 7.2-16 16-16s16 7.2 16 16v32h48c17.7 0 32-14.3 32-32V352zM192 160v64c0 17.7-14.3 32-32 32s-32-14.3-32-32V160c0-17.7 14.3-32 32-32s32 14.3 32 32zm128 0v64c0 17.7-14.3 32-32 32s-32-14.3-32-32V160c0-17.7 14.3-32 32-32s32 14.3 32 32zm128 0v64c0 17.7-14.3 32-32 32s-32-14.3-32-32V160c0-17.7 14.3-32 32-32s32 14.3 32 32z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
              >
                Memory
              </span>
            </div>
            <span
              class="sc-ivTmOn dNJphr sc-llJcti bvCivW"
              style="line-height: 1;"
            >
              ​
            </span>
          </div>
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          <span
            class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
          >
            453 MB
          </span>
          /
          <span
            class="sc-ivTmOn dNJphr sc-llJcti hxUajt"
          >
            1 GB
          </span>
        </span>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK exPuPE"
      >
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds hYdgwD"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="success"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT mCDFM"
              style="width: 45.300000000000004%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 220.75055187637966%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/StatsBar Storage 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf ckXSHX sc-iBkjds gXkNkX sc-hHLeRK eTSHtc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds hNqnWQ sc-hHLeRK fICmLJ"
      >
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          <div
            class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK cypUEk"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux"
            >
              <span
                class="sc-ivTmOn dNJphr sc-llJcti elVvfY"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-hard-drive "
                  data-icon="hard-drive"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V280.4c-17-15.2-39.4-24.4-64-24.4H64c-24.6 0-47 9.2-64 24.4V96zM64 288H448c35.3 0 64 28.7 64 64v64c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V352c0-35.3 28.7-64 64-64zM320 416c17.7 0 32-14.3 32-32s-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32zm128-32c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              <span
                class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
              >
                Storage
              </span>
            </div>
            <span
              class="sc-ivTmOn dNJphr sc-llJcti bvCivW"
              style="line-height: 1;"
            >
              Storage block device
            </span>
          </div>
        </span>
        <span
          class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
        >
          <span
            class="sc-ivTmOn dNJphr sc-llJcti hQwFFc"
          >
            623 MB
          </span>
          /
          <span
            class="sc-ivTmOn dNJphr sc-llJcti hxUajt"
          >
            1 GB
          </span>
        </span>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK exPuPE"
      >
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds hYdgwD"
        >
          <div
            class="sc-fctJkW hVFQfg sc-HzFiz fzqlHq"
            color="#fff"
            type="warning"
          >
            <div
              class="sc-jQHtVU cDMxHp"
            />
            <div
              class="sc-jTYCaT inPfE"
              style="width: 62.3%;"
            >
              <div
                class="sc-fvNpTx flrTXX"
                style="width: 160.51364365971108%;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
